<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#fff"
    >
    <Button
        android:id="@+id/btn_finish"
        android:text="@string/finish_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn_close"
        android:text="@string/close_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn_delete"
        android:text="@string/delete_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn_savechanges"
        android:text="@string/save_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn_modify"
        android:text="@string/modify_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>