<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.lixb.mysms.act.TaskDetailActivity">
    <RelativeLayout
        android:padding="2dp"
        android:background="#333333"
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <TextView
            android:id="@+id/tv_close"
            android:textSize="20sp"
            android:textColor="#fcfcfc"
            android:text="@string/close"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_task_topic"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:textColor="#ffffff"
            android:textSize="26sp"
            android:text="@string/task_detail"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <ImageView
            android:id="@+id/iv_more"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:src="@mipmap/abc_ic_menu_moreoverflow_mtrl_alpha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:visibility="gone"
            android:id="@+id/tv_completedTask"
            android:layout_alignParentRight="true"
            android:textSize="20sp"
            android:textColor="#fcfcfc"
            android:text="@string/fulfil_task"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <include layout="@layout/layout_task_common" />

            <TextView
                android:text="@string/add_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:background="@null"
                android:id="@+id/et_comment"
                android:hint="@string/hint_comment"
                android:layout_width="match_parent"
                android:layout_height="48dp" />

            <TextView
                android:id="@+id/tv_commit"
                android:layout_gravity="right"
                android:text="@string/commit"
                android:textSize="20sp"
                android:layout_marginRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <!--评论列表-->
            <TextView
                android:text="@string/comments_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.lixb.mysms.view.CommentListView
                android:id="@+id/lv_comments"
                android:scrollbars="none"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </com.lixb.mysms.view.CommentListView>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
